# afterquery_mcp

./: .gitignore  ARCHITECTURE.md  CHALLENGES_SOLVED.md  README.md  TOOL_DESIGN.md  blender_mcp_addon.py  blender_mcp_filter.py  blender_mcp_server.py  claude_desktop_config.json  demo-video.txt  pyproject.toml  pyrightconfig.json
src/: __init__.py  models.py  operations.py  server.py  tools.py
